MZK 23.09.2018 19:02:35 -0700

1. Перевёл страницу @SelectFiles справки на английский и переработал русскую страницу.

drkns 20.09.2018 07:47:30 +0100 - build 5272

1. Уточнение 5264.1.

MZK 18.09.2018 00:12:21 -0700

1. Подсказка: уточнил описание опций форматирования размера файла.

w17 17.09.2018 21:04:43 +0300 - build 5271

1. Ещё одно уточнение 5268.1.

svs 17.09.2018 13:56:40 +0300 - build 5270

1. SQLite 3.25.0

drkns 16.09.2018 07:59:04 +0100 - build 5269

1. Уточнение 5268.1.

drkns 15.09.2018 15:13:24 +0100 - build 5268

1. Рефакторинг. Паттерны типа "int X1, int X2, int Y1, int Y2" заменены на rectangle, "int X, int Y" - на point.

2. Экспериментально: Ctrl+U не меняет размеры панелей.

3. tag_build.bat должен корректно работать в локалях, отличных от 866.

zg 13.09.2018 12:09:52 +0300 - build 5267

1. уточнение 5262: вызов DialogInit(-1,-1,0,0) эквивалентен DialogInit(-1,-1,1,1).

drkns 10.09.2018 20:39:25 +0100 - build 5266

1. Не работал экспорт pluginhotkeys.db

drkns 06.09.2018 23:43:10 +0100 - build 5265

1. При удалении нескольких папок некорректно отображался изначальный подсчет размера.

2. assert в debug при вводе пробела в комстроку.

3. Рефакторинг.

drkns 04.09.2018 21:37:50 +0100 - build 5264

1. При наличии elevated-процесса основной процесс закрывался раньше, чем надо.

2. С форума: Ошибка при получении помощи по плагину.

MZK 02.09.2018 23:09:13 -0700

1. Перевёл страницу @ChangeDriveMode справки на английский и поредактировал русскую страницу.

drkns 02.09.2018 22:14:00 +0100 - build 5263

1. Поле "Owner" в диалоге атрибутов передвинуто вниз.

2. Рефакторинг.

3. Update Slovak translation.

zg 01.09.2018 18:59:52 +0300 - build 5262

1. проверка корректности координат в DialogInit.

drkns 22.08.2018 23:59:59 +0100 - build 5261

1. Откат отката (4858) и возвращение к 4853 и shared_mutex. Возможно, поиску в архивах станет лучше. Или нет.

zg 22.08.2018 17:50:28 +0300 - build 5260

1. откат 5256.
