@@ -1,3 +1,10 @@
+drkns 26.09.2018 18:54:39 +0300 - build 5273
+
+1. Добавлены задержки в обработку мыши для случая "клавиша нажата и удерживается для прокрутки" в стиле клавиатурных:
+   action -> long pause -> action -> short pause -> action -> short pause -> action...
+
+2. Мелкий рефакторинг и еще пара уточнений 5268.1.
+
 MZK 23.09.2018 19:02:35 -0700
 
 1. Перевёл страницу @SelectFiles справки на английский и переработал русскую страницу.
